--- a/Exercise 1/01_Exercise.Rmd
+++ b/Exercise 1/01_Exercise.Rmd
@@ -166,13 +166,13 @@ $$
 $$
 for $\alpha \in (0, 1)$.
 
-We may then find the inverse cumulative function. For $x \leq 0$ this is just zero, and for $0 < x < 1$, that is $0 < G(x) < \frac{\mathrm{e}}{\alpha + \mathrm{e}}$, we solve $x = \frac{\mathrm{e}}{\alpha + \mathrm{e}} y^\alpha$ for $y$ giving $G^{-1}(x) = \left( \frac{\alpha + \mathrm{e}}{\mathrm{e}} x \right)^{1/\alpha}$. Similarly for $x \geq 1$, that is $G(x) \geq 1 - \frac{\alpha}{\alpha + \mathrm{e}} = \frac{\mathrm{e}}{\alpha + \mathrm{e}}$, we solve $x = 1 - \frac{\alpha}{\alpha + \mathrm{e}} \mathrm{e}^{1-y}$ for $y$, such that
+We may then find the inverse cumulative function. For $x \leq 0$ this is just zero, and for $0 < x < 1$, that is $0 < G(x) < \frac{\mathrm{e}}{\alpha + \mathrm{e}}$, we solve $y = \frac{\mathrm{e}}{\alpha + \mathrm{e}} x^\alpha$ for $x$ giving $G^{-1}(y) = \left( \frac{\alpha + \mathrm{e}}{\mathrm{e}} y \right)^{1/\alpha}$. Similarly for $x \geq 1$, that is $G(x) \geq 1 - \frac{\alpha}{\alpha + \mathrm{e}} = \frac{\mathrm{e}}{\alpha + \mathrm{e}}$, we solve $y = 1 - \frac{\alpha}{\alpha + \mathrm{e}} \mathrm{e}^{1-x}$ for $x$, such that
 $$
-  G^{-1}(x) =
+  G^{-1}(y) =
   \begin{cases}
-    \left( \frac{\alpha + \mathrm{e}}{\mathrm{e}} x \right)^{1/\alpha} & \text{if } 0 \leq x < \frac{\mathrm{e}}{\alpha + \mathrm{e}},
+    \left( \frac{\alpha + \mathrm{e}}{\mathrm{e}} y \right)^{1/\alpha} & \text{if } 0 \leq y < \frac{\mathrm{e}}{\alpha + \mathrm{e}},
     \\
-    \ln\left[ \frac{\alpha \mathrm{e}}{(1-x) (\alpha + \mathrm{e})} \right] & \text{if } \frac{\mathrm{e}}{\alpha + \mathrm{e}} \leq x \leq 1,
+    \ln\left[ \frac{\alpha \mathrm{e}}{(1-y) (\alpha + \mathrm{e})} \right] & \text{if } \frac{\mathrm{e}}{\alpha + \mathrm{e}} \leq y \leq 1,
   \end{cases}
 $$
 for $\alpha \in (0, 1)$.
@@ -283,11 +283,11 @@ $$
 $$
 which holds for $-\infty < x < \infty$ and $\alpha > 0$.
 
-Solving $x = \e^{\alpha y} / (1 + \e^{\alpha y})$ for $y$ then gives us the inverse cumulative distribution function. Some algebra then gives that
+Solving $y = \e^{\alpha x} / (1 + \e^{\alpha x})$ for $x$ then gives us the inverse cumulative distribution function. Some algebra then gives that
 $$
-  F^{-1}(x) = \frac{1}{\alpha} \ln\left( \frac{x}{1-x} \right) = \frac{1}{\alpha} \left[ \ln\left( x \right) - \ln\left( 1-x \right) \right],
+  F^{-1}(y) = \frac{1}{\alpha} \ln\left( \frac{y}{1-y} \right) = \frac{1}{\alpha} \left[ \ln\left( y \right) - \ln\left( 1-y \right) \right],
 $$
-for $0 < x < 1$ and $\alpha > 0$.
+for $0 < y < 1$ and $\alpha > 0$.
 
 
 ### Subsubproblem (c)
@@ -353,12 +353,12 @@ var(fx_samp)
 [//]: # ----------------------------------------------------------------------------------------------------------------
 
 ## Subproblem 4.
-We wish to simulate from a $\Normal(0, 1)$ distribution using the Box-Muller algoritm. If $X_1 \sim \Uniform(0, \pi)$ and $X_2 \sim \Exp(1/2)$, then $Y_1 = \sqrt{X_2} \cos(X_1)$ and $Y_2 = \sqrt{X_2} \sin(X_1)$ are standard normal distributed. We use $Z = \sqrt{X_2} \cos(X_1)$ in the following code block. The result of the simulation can be seen in Figure \ref{fig:Box_Muller}, and it also shows the theoretical probability density function.
+We wish to simulate from a $\Normal(0, 1)$ distribution using the Box-Muller algoritm. If $X_1 \sim \Uniform(0, 2\pi)$ and $X_2 \sim \Exp(1/2)$, then $Y_1 = \sqrt{X_2} \cos(X_1)$ and $Y_2 = \sqrt{X_2} \sin(X_1)$ are standard normal distributed. We use $Z = \sqrt{X_2} \cos(X_1)$ in the following code block. The result of the simulation can be seen in Figure \ref{fig:Box_Muller}, and it also shows the theoretical probability density function.
 
 ```{r generate from Box-Muller, fig.cap = "\\label{fig:Box_Muller}One million samples drawn from a standard normal distribution using the Box-Muller algorithm, together with the theoretical PDF."}
 
 std_normal <- function(n) {
-  X1 <- pi * runif(n)   # n samples from Uniform(0, pi)
+  X1 <- 2 * pi * runif(n)   # n samples from Uniform(0, 2pi)
   X2 <- generate_from_exp(n, 1/2)   # n samples from Exponential(1/2)
   Z <- X2^(1/2) * cos(X1)   # Z ~ Normal(0, 1)
   return(Z)
@@ -571,7 +571,7 @@ and
 a = \sqrt{\sup_x f^*(x)},\quad b_+ = \sqrt{\sup_{x\geq 0}(x^2 f^*(x))}\quad \text{and}\quad b_- = -\sqrt{\sup_{x\leq 0}(x^2 f^*(x))},
 \end{equation}
 
-such that $C_f\subset[0,1]\times[b_-, b_+]$.
+such that $C_f\subset[0,a]\times[b_-, b_+]$.
 
 First we find $\sup_x f^*(x)$. This must be when $x>0$. We differentiate $f^*(x)$ and setting the expression equal to zero to find the stationary point.
 $$
@@ -1095,7 +1095,7 @@ Above we found that
 \end{equation}
 which means that when the correlation term is equal to zero, we would expect about the same variance as in the importance sampling method with half the sample size. The sampling correlation computed above is
 $$
-  \Corr\left[h(X^{(1)})w(X^{(1)}), h(X^{(2)})w(X^{(2)})\right] = `r cor(hw1, hw2)`,
+  \widehat{\Corr}\left[h(X^{(1)})w(X^{(1)}), h(X^{(2)})w(X^{(2)})\right] = `r cor(hw1, hw2)`,
 $$
 which explains why we get an even more precise estimate.
 
@@ -1232,7 +1232,7 @@ In the following code block we find the values of `mu_est` and `mu_num`.
 mu_est
 mu_num
 ```
-From this it is clear that the estimated posterior mean is $\hat{\mu} \approx 0.624$ using Monte Carlo integration, and $\mu \approx 0.623$ using numerical integration with `integrate()`. Figure \ref{fig:Monte_Carlo} also shows that these means corresponds well to the real posterior mean.
+From this it is clear that the estimated posterior mean is $\hat{\mu} \approx r `mu_est`$ using Monte Carlo integration, and $\mu \approx `r mu_num`$ using numerical integration with `integrate()`. Figure \ref{fig:Monte_Carlo} also shows that these means corresponds well to the real posterior mean.
 
 
 [//]: # ----------------------------------------------------------------------------------------------------------------
